--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -43,7 +43,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
-                android:text="Change Password"
+                android:text="@string/change_password"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
                 android:textStyle="bold"
@@ -101,7 +101,7 @@
                 android:id="@+id/text_old_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Enter Old Password"
+                android:text="@string/old_password"
                 android:textSize="14sp"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_hide_password_second"
                 android:drawablePadding="6dp"
-                android:text="Hide"
+                android:text="@string/hide"
                 android:textSize="12sp"
                 android:textColor="@color/grey"
                 android:layout_marginStart="30dp"
@@ -160,7 +160,7 @@
                 android:id="@+id/text_forgot_old_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Forgot your old password? Click here."
+                android:text="@string/password_click_here"
                 android:textColor="@color/dark_blue"
                 android:gravity="center_horizontal"
                 android:layout_marginTop="22dp"
@@ -174,7 +174,7 @@
                 android:id="@+id/text_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Enter New Password"
+                android:text="@string/new_password"
                 android:textSize="14sp"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"
@@ -220,7 +220,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_hide_password_second"
                 android:drawablePadding="6dp"
-                android:text="Hide"
+                android:text="@string/hide"
                 android:textSize="12sp"
                 android:textColor="@color/grey"
                 android:layout_marginStart="30dp"
@@ -240,7 +240,7 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/bg_button"
                 android:padding="16dp"
-                android:text="Change"
+                android:text="@string/change"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/button_textSize"
