--- a/app/src/main/res/layout/activity_new_request.xml
+++ b/app/src/main/res/layout/activity_new_request.xml
@@ -43,7 +43,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
-                android:text="New Requests"
+                android:text="@string/new_requests"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
                 android:textStyle="bold"
@@ -57,7 +57,7 @@
         android:id="@+id/text_new_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Fan Requests"
+        android:text="@string/new_fan_requests"
         android:layout_marginTop="4dp"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -80,7 +80,7 @@
         android:id="@+id/text_suggestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Suggestions"
+        android:text="@string/suggestions"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textSize="14sp"
