--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -33,11 +33,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
-                android:text="Scoreboard"
+                android:text="@string/scoreboard"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/image_start_newGame"
                 app:layout_constraintStart_toEndOf="@id/button_openProfile"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
@@ -59,7 +58,7 @@
                     android:id="@+id/text_points"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Points"
+                    android:text="@string/points"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -73,7 +72,7 @@
                     android:id="@+id/text_yards"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yards"
+                    android:text="@string/yards"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -88,7 +87,7 @@
                     android:id="@+id/text_team_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Team Score"
+                    android:text="@string/team_score"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -103,7 +102,7 @@
                     android:id="@+id/text_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Time"
+                    android:text="@string/time"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -129,7 +128,7 @@
                     android:id="@+id/text_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Points"
+                    android:text="@string/points"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -143,7 +142,7 @@
                     android:id="@+id/text_yard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yards"
+                    android:text="@string/yards"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -158,7 +157,7 @@
                     android:id="@+id/text_team_scor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Team Score"
+                    android:text="@string/team_score"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -173,7 +172,7 @@
                     android:id="@+id/text_tim"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Time"
+                    android:text="@string/time"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:drawablePadding="3dp"
@@ -357,7 +356,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_button"
         android:gravity="center"
-        android:text="Finish Game"
+        android:text="@string/finish_game"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/button_textSize"
@@ -375,7 +374,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_button_start_later"
         android:gravity="center"
-        android:text="Save Game for Later"
+        android:text="@string/save_game_for_later"
         android:textAllCaps="false"
         android:textColor="@color/orange_textcolor"
         android:textSize="@dimen/button_textSize"
