--- a/app/src/main/res/layout/activity_succes_change_password.xml
+++ b/app/src/main/res/layout/activity_succes_change_password.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/text_success"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Success!"
+                android:text="@string/success_change_password"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:gravity="center_horizontal"
@@ -51,7 +51,7 @@
                 android:id="@+id/text_success_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="You have successfully changed your \npassword."
+                android:text="@string/you_have_successfully_changed"
                 android:textColor="@color/white"
                 android:textSize="@dimen/paragraph_size"
                 android:layout_marginTop="16dp"
@@ -83,7 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_button"
-        android:text="Keep me Logged in"
+        android:text="@string/keep_me_logged_in"
         android:textSize="@dimen/button_textSize"
         android:textColor="@color/white"
         android:textAllCaps="false"
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_button_logout"
-        android:text="Logout"
+        android:text="@string/logout"
         android:textSize="@dimen/button_textSize"
         android:textColor="@color/orange_textcolor"
         android:textAllCaps="false"
