--- a/app/src/main/res/layout/activity_success_created_user.xml
+++ b/app/src/main/res/layout/activity_success_created_user.xml
@@ -57,7 +57,7 @@
         android:id="@+id/text_success"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Success!"
+        android:text="@string/succes_created_user"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -82,7 +82,7 @@
         android:id="@+id/text_generate_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Generated code"
+        android:text="@string/generated_code"
         android:textColor="@color/white_text_opacity"
         android:textSize="14sp"
         android:gravity="center"
@@ -109,7 +109,7 @@
         android:id="@+id/text_copy_clipboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Copy to Clipboard"
+        android:text="@string/copy_to_clipboard"
         android:textColor="@color/dark_grey"
         android:textSize="14sp"
         android:gravity="center"
@@ -122,7 +122,7 @@
         android:id="@+id/button_share_now"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Share Now"
+        android:text="@string/share_now"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -140,7 +140,7 @@
         android:id="@+id/button_add_to_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Add player to my list"
+        android:text="@string/add_player_to_my_list"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textColor="@color/white"
