--- a/app/src/main/res/layout/activity_my_fans.xml
+++ b/app/src/main/res/layout/activity_my_fans.xml
@@ -35,7 +35,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
-                android:text="My Fans"
+                android:text="@string/fans"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
                 android:textStyle="bold"
@@ -48,7 +48,7 @@
         android:id="@+id/edit_text_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search"
+        android:hint="@string/search"
         android:layout_margin="20dp"
         android:padding="10dp"
         android:textColorHint="@color/grey"
@@ -72,7 +72,7 @@
         android:id="@+id/text_my_fan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Fans"
+        android:text="@string/fans"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textSize="14sp"
