--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -33,11 +33,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
-                android:text="Stats"
+                android:text="@string/stats"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/image_start_newGame"
                 app:layout_constraintStart_toEndOf="@id/button_openProfile"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
