--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="14dp"
             android:textColor="@color/black"
             android:padding="4dp"
-            android:text="Are you sure you want to delete this \ngame that is currently in progress?" />
+            android:text="@string/are_you_sure_you_want_to_delete" />
     </LinearLayout>
 
     <LinearLayout
@@ -51,7 +51,7 @@
             android:id="@+id/button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:background="@android:color/transparent"
@@ -61,7 +61,7 @@
             android:id="@+id/button_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
+            android:text="@string/delete"
             android:textAllCaps="false"
             android:background="@android:color/transparent"
             android:textColor="@color/white"
